-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 15.0.1
-
-
984256bfe (master)
Under some conditions, Qt Creator SCXML editor is not handling the "implicit initial state" in an expected way.
The issues can be reproduced with the steps below, with the scxml file included in the attached example project :
Issue 1:
1. Drag the "ImplicitInitial" state with the Initial state marker out from the State_1.
The initial state marker will move to the "ShouldNeverBeInitial" state.
2. Drag the "ImplicitInitial" state back into the State_1.
The inisital state marker never come back to the "ImplicitInitial".
Issue 2:
1. Drag the "ImplicitInitial" state with the Initial state marker to somewhere within the State_1.
The initial state marker will temporary move to the "ShouldNeverBeInitial", but it will go back to "ImplicitInitial" state when you release the button.
2. Try to go back to the default state by repeatedly hitting ctrl + z.
The "ImplicitInitial" state will go back to the default position, but the inisital state marker will never be go back there.
Workaround:
Both issues can be avoided by explicitly set "ImplicitInitial" as the initial state by right-clicking on "ImplicitInitial" and selecting "Set as Initial".
This issue may be related to QTBUG-109989 .
- relates to
-
QTCREATORBUG-17108 SCXML editor cannot set or even keep the "initial" attribute on states
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-32603 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
683594,4 | ScxmlEditor: Set initial state on load | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |