ScxmlEditor: Set initial state on load

If no initial state was selected, select the first one.

This should fix the Issue 2 from the bugreport.

Fixes: QTCREATORBUG-32603
Change-Id: I863ab2fa1b3944d5a5f776a84c5a4203171e237b
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: hjk <hjk@qt.io>